src/main/java/com/example/msamemberapi/application/error/application/CustomException.java
package com.example.msamemberapi.application.error.application;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class CustomException extends RuntimeException{
    private final ErrorCode errorCode;

}
